--- a/stylem.css
+++ b/stylem.css
@@ -128,6 +128,10 @@ header {
         box-shadow: 4px 4px 1em -0.6em #575757;
     }
 
+    .card0 {
+        float: left;
+    }
+
         .card > img {
             max-width: 12rem;
             max-height: 12rem;
